--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ layout: default
         {% for post in sorted_posts %}
         <li>
             {{ post.date | date: "%d-%m-%Y" }} - 
-            {% if post.categories contains 'bilingual' %}
+            {% if post.categories contains 'content' %}
             🌐
             {% endif %}
             <a href="{{ post.url }}">
-                <strong>🇧🇷</strong> {{ post.title.pt }} •
                 <strong>🇬🇧</strong> {{ post.title.en }} •
+                <strong>🇧🇷</strong> {{ post.title.pt }} •
                 <strong>🇪🇸</strong> {{ post.title.es }}
             </a>
         </li>
