--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
             🌐
             {% endif %}
             <a href="{{ post.url }}">
-                <strong>🇬🇧</strong> {{ post.title.en }} •
-                <strong>🇧🇷</strong> {{ post.title.pt }} •
+                <strong>🇬🇧</strong> {{ post.title.en }} ·
+                <strong>🇧🇷</strong> {{ post.title.pt }} ·
                 <strong>🇪🇸</strong> {{ post.title.es }}
             </a>
         </li>
