--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
         {% for post in sorted_posts %}
         <li>
             {{ post.date | date: "%d-%m-%Y" }} - 
-            {% if post.categories contains 'content' %}
+            <!-- {% if post.categories contains 'content' %}
             🌐
-            {% endif %}
+            {% endif %} -->
             <a href="{{ post.url }}">
                 <strong>🇬🇧</strong> {{ post.title.en }} ·
                 <strong>🇧🇷</strong> {{ post.title.pt }} ·
